--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
         font-size: 14px;
         line-height: 1.4;
       }
+        @media screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
     </style>
   </head>
   <body>
